--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 	<body>
 		<div class="container">
 			<header>
+				<h1>Movie Fan</h1>
+
 				<section>
 					<div class="search-container">
 						<input class="search-bar" type="text" placeholder="Buscar" />
@@ -49,11 +51,49 @@
 							<ul>
 								<li>Accion</li>
 								<li>Suspenso</li>
+								<li>Suspenso</li>
+								<li>Suspenso</li>
+								<li>Suspenso</li>
+								<li>Suspenso</li>
+								<li>Suspenso</li>
+								<li>Suspenso</li>
+								<li>Suspenso</li>
+								<li>Suspenso</li>
+								<li>Suspenso</li>
+								<li>Suspenso</li>
+								<li>Suspenso</li>
 							</ul>
 						</div>
 					</div>
 
 					<div class="movies">
+						<div class="card">
+							<div class="movie-img">
+								<img src="https://dummyimage.com/250x350/000/fff" alt="" />
+							</div>
+							<div class="movie-title">
+								<h3>Titulo de la pelicula</h3>
+							</div>
+						</div>
+
+						<div class="card">
+							<div class="movie-img">
+								<img src="https://dummyimage.com/250x350/000/fff" alt="" />
+							</div>
+							<div class="movie-title">
+								<h3>Titulo de la pelicula</h3>
+							</div>
+						</div>
+
+						<div class="card">
+							<div class="movie-img">
+								<img src="https://dummyimage.com/250x350/000/fff" alt="" />
+							</div>
+							<div class="movie-title">
+								<h3>Titulo de la pelicula</h3>
+							</div>
+						</div>
+
 						<div class="card">
 							<div class="movie-img">
 								<img src="https://dummyimage.com/250x350/000/fff" alt="" />
