--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 						</div>
 					</div>
 
-					<div class="movies">
-						<div class="card">
+					<div class="movies" id="movies">
+						<!-- <div class="card">
 							<div class="movie-img">
 								<img src="https://dummyimage.com/250x350/000/fff" alt="" />
 							</div>
@@ -145,8 +145,8 @@
 							</div>
 							<div class="movie-title">
 								<h3>Titulo de la pelicula</h3>
-							</div>
-						</div>
+							</div> 
+						</div> -->
 					</div>
 				</section>
 			</main>
