--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Movie Fan</title>
-
+		<!-- FONT AWESOME -->
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+			integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
 		<!-- CSS -->
-		<!-- <link rel="stylesheet" href="public/css/bootstrap.css" /> -->
+		<link rel="stylesheet" href="public/css/bootstrap.css" />
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -18,141 +25,277 @@
 		<link rel="stylesheet" href="public/css/main.css" />
 	</head>
 	<body>
-		<div class="container">
-			<header>
-				<h1>Movie Fan</h1>
+		<header>
+			<section class="container header">
+				<h1 class="mt-4">Movie Fan</h1>
 
-				<section>
-					<div class="search-container">
-						<input class="search-bar" type="text" placeholder="Buscar" />
-
-						<button class="search-button" type="submit">
-							<i class="fa fa-search"></i>
-						</button>
-					</div>
-				</section>
-			</header>
-
-			<main>
-				<section class="movies-container">
-					<div>
-						<div class="guide-button-container">
-							<button class="guide-button" type="button">
-								<i class="fas fa-bars"></i>
-							</button>
-						</div>
-
-						<div class="guide">
-							<ul>
-								<li>Mejor valoradas</li>
-								<li>Mas recientes</li>
-								<li>Proximos estrenos</li>
-							</ul>
-							<ul>
-								<li>Accion</li>
-								<li>Suspenso</li>
-								<li>Suspenso</li>
-								<li>Suspenso</li>
-								<li>Suspenso</li>
-								<li>Suspenso</li>
-								<li>Suspenso</li>
-								<li>Suspenso</li>
-								<li>Suspenso</li>
-								<li>Suspenso</li>
-								<li>Suspenso</li>
-								<li>Suspenso</li>
-								<li>Suspenso</li>
-							</ul>
+				<div class="row d-flex justify-content-center mt-5">
+					<div class="col-lg-8">
+						<div class="card">
+							<div class="input-box d-flex align-items-center">
+								<input type="text" placeholder="Buscar" class="form-control" />
+								<button type="submit"><i class="fa fa-search"></i></button>
+							</div>
 						</div>
 					</div>
+				</div>
+			</section>
+		</header>
 
-					<div class="movies" id="movies">
-						<!-- <div class="card">
-							<div class="movie-img">
-								<img src="https://dummyimage.com/250x350/000/fff" alt="" />
+		<main>
+			<section class="container-fluid mt-5">
+				<div class="row">
+					<div class="col-12 col-lg-2">
+						<nav class="navbar navbar-expand-lg navbar-light fs-2">
+							<div class="container-fluid d-flex justify-content-center">
+								<button
+									class="navbar-toggler"
+									type="button"
+									data-bs-toggle="collapse"
+									data-bs-target="#navbarSupportedContent"
+									aria-controls="navbarSupportedContent"
+									aria-expanded="false"
+									aria-label="Toggle navigation"
+								>
+									<span class="navbar-toggler-icon"></span>
+								</button>
+								<div
+									class="collapse navbar-collapse"
+									id="navbarSupportedContent"
+								>
+									<ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center">
+										<li class="nav-item">
+											<a class="nav-link" aria-current="page" href="#"
+												>Mejor valoradas</a
+											>
+										</li>
+										<li class="nav-item">
+											<a class="nav-link" href="#">Ultimos estrenos</a>
+										</li>
+										<li class="nav-item dropdown">
+											<a
+												class="nav-link dropdown-toggle"
+												href="#"
+												id="navbarDropdown"
+												role="button"
+												data-bs-toggle="dropdown"
+												aria-expanded="false"
+											>
+												Generos
+											</a>
+											<ul
+												class="dropdown-menu fs-4 text-center"
+												aria-labelledby="navbarDropdown"
+											>
+												<li>
+													<a class="dropdown-item" href="#">Accion</a>
+												</li>
+												<li>
+													<a class="dropdown-item" href="#">Ciencia Ficcion</a>
+												</li>
+												<li>
+													<hr class="dropdown-divider" />
+												</li>
+												<li>
+													<a class="dropdown-item" href="#">Comedia</a>
+												</li>
+											</ul>
+										</li>
+									</ul>
+								</div>
 							</div>
-							<div class="movie-title">
-								<h3>Titulo de la pelicula</h3>
-							</div>
-						</div>
-
-						<div class="card">
-							<div class="movie-img">
-								<img src="https://dummyimage.com/250x350/000/fff" alt="" />
-							</div>
-							<div class="movie-title">
-								<h3>Titulo de la pelicula</h3>
-							</div>
-						</div>
-
-						<div class="card">
-							<div class="movie-img">
-								<img src="https://dummyimage.com/250x350/000/fff" alt="" />
-							</div>
-							<div class="movie-title">
-								<h3>Titulo de la pelicula</h3>
-							</div>
-						</div>
-
-						<div class="card">
-							<div class="movie-img">
-								<img src="https://dummyimage.com/250x350/000/fff" alt="" />
-							</div>
-							<div class="movie-title">
-								<h3>Titulo de la pelicula</h3>
-							</div>
-						</div>
-
-						<div class="card">
-							<div class="movie-img">
-								<img src="https://dummyimage.com/250x350/000/fff" alt="" />
-							</div>
-							<div class="movie-title">
-								<h3>Titulo de la pelicula</h3>
-							</div>
-						</div>
-
-						<div class="card">
-							<div class="movie-img">
-								<img src="https://dummyimage.com/250x350/000/fff" alt="" />
-							</div>
-							<div class="movie-title">
-								<h3>Titulo de la pelicula</h3>
-							</div>
-						</div>
-
-						<div class="card">
-							<div class="movie-img">
-								<img src="https://dummyimage.com/250x350/000/fff" alt="" />
-							</div>
-							<div class="movie-title">
-								<h3>Titulo de la pelicula</h3>
-							</div>
-						</div>
-
-						<div class="card">
-							<div class="movie-img">
-								<img src="https://dummyimage.com/250x350/000/fff" alt="" />
-							</div>
-							<div class="movie-title">
-								<h3>Titulo de la pelicula</h3>
-							</div>
-						</div>
-
-						<div class="card">
-							<div class="movie-img">
-								<img src="https://dummyimage.com/250x350/000/fff" alt="" />
-							</div>
-							<div class="movie-title">
-								<h3>Titulo de la pelicula</h3>
-							</div> 
-						</div> -->
+						</nav>
 					</div>
-				</section>
-			</main>
-		</div>
+					<div class="col-12 col-lg-10 mt-5 mt-lg-0">
+						<div class="row">
+							<div class="col-12 col-md-6 col-lg-4 col-xxl-2 mb-5">
+								<div class="card">
+									<img
+										src="https://dummyimage.com/600x400/000/fff"
+										class="card-img-top"
+										alt="..."
+									/>
+									<div class="card-body">
+										<h5 class="card-title fs-1">Card title</h5>
+										<p class="card-text fs-3">
+											Some quick example text to build on the card title and
+											make up the bulk of the card's content.
+										</p>
+									</div>
+									<ul class="list-group list-group-flush">
+										<li class="list-group-item">Accion</li>
+										<li class="list-group-item">9.0</li>
+										<li class="list-group-item">A third item</li>
+									</ul>
+									<div class="card-body">
+										<a href="#" class="card-link">Card link</a>
+										<a href="#" class="card-link">Another link</a>
+									</div>
+								</div>
+							</div>
 
-		<!-- <script src="public/js/bootstrap.bundle.js"></script> -->
+							<div class="col-12 col-md-6 col-lg-4 col-xxl-2 mb-5">
+								<div class="card">
+									<img
+										src="https://dummyimage.com/600x400/000/fff"
+										class="card-img-top"
+										alt="..."
+									/>
+									<div class="card-body">
+										<h5 class="card-title fs-1">Card title</h5>
+										<p class="card-text fs-3">
+											Some quick example text to build on the card title and
+											make up the bulk of the card's content.
+										</p>
+									</div>
+									<ul class="list-group list-group-flush">
+										<li class="list-group-item">Accion</li>
+										<li class="list-group-item">9.0</li>
+										<li class="list-group-item">A third item</li>
+									</ul>
+									<div class="card-body">
+										<a href="#" class="card-link">Card link</a>
+										<a href="#" class="card-link">Another link</a>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-12 col-md-6 col-lg-4 col-xxl-2 mb-5">
+								<div class="card">
+									<img
+										src="https://dummyimage.com/600x400/000/fff"
+										class="card-img-top"
+										alt="..."
+									/>
+									<div class="card-body">
+										<h5 class="card-title fs-1">Card title</h5>
+										<p class="card-text fs-3">
+											Some quick example text to build on the card title and
+											make up the bulk of the card's content.
+										</p>
+									</div>
+									<ul class="list-group list-group-flush">
+										<li class="list-group-item">Accion</li>
+										<li class="list-group-item">9.0</li>
+										<li class="list-group-item">A third item</li>
+									</ul>
+									<div class="card-body">
+										<a href="#" class="card-link">Card link</a>
+										<a href="#" class="card-link">Another link</a>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-12 col-md-6 col-lg-4 col-xxl-2 mb-5">
+								<div class="card">
+									<img
+										src="https://dummyimage.com/600x400/000/fff"
+										class="card-img-top"
+										alt="..."
+									/>
+									<div class="card-body">
+										<h5 class="card-title fs-1">Card title</h5>
+										<p class="card-text fs-3">
+											Some quick example text to build on the card title and
+											make up the bulk of the card's content.
+										</p>
+									</div>
+									<ul class="list-group list-group-flush">
+										<li class="list-group-item">Accion</li>
+										<li class="list-group-item">9.0</li>
+										<li class="list-group-item">A third item</li>
+									</ul>
+									<div class="card-body">
+										<a href="#" class="card-link">Card link</a>
+										<a href="#" class="card-link">Another link</a>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-12 col-md-6 col-lg-4 col-xxl-2 mb-5">
+								<div class="card">
+									<img
+										src="https://dummyimage.com/600x400/000/fff"
+										class="card-img-top"
+										alt="..."
+									/>
+									<div class="card-body">
+										<h5 class="card-title fs-1">Card title</h5>
+										<p class="card-text fs-3">
+											Some quick example text to build on the card title and
+											make up the bulk of the card's content.
+										</p>
+									</div>
+									<ul class="list-group list-group-flush">
+										<li class="list-group-item">Accion</li>
+										<li class="list-group-item">9.0</li>
+										<li class="list-group-item">A third item</li>
+									</ul>
+									<div class="card-body">
+										<a href="#" class="card-link">Card link</a>
+										<a href="#" class="card-link">Another link</a>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-12 col-md-6 col-lg-4 col-xxl-2 mb-5">
+								<div class="card">
+									<img
+										src="https://dummyimage.com/600x400/000/fff"
+										class="card-img-top"
+										alt="..."
+									/>
+									<div class="card-body">
+										<h5 class="card-title fs-1">Card title</h5>
+										<p class="card-text fs-3">
+											Some quick example text to build on the card title and
+											make up the bulk of the card's content.
+										</p>
+									</div>
+									<ul class="list-group list-group-flush">
+										<li class="list-group-item">Accion</li>
+										<li class="list-group-item">9.0</li>
+										<li class="list-group-item">A third item</li>
+									</ul>
+									<div class="card-body">
+										<a href="#" class="card-link">Card link</a>
+										<a href="#" class="card-link">Another link</a>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-12 col-md-6 col-lg-4 col-xxl-2 mb-5">
+								<div class="card">
+									<img
+										src="https://dummyimage.com/600x400/000/fff"
+										class="card-img-top"
+										alt="..."
+									/>
+									<div class="card-body">
+										<h5 class="card-title fs-1">Card title</h5>
+										<p class="card-text fs-3">
+											Some quick example text to build on the card title and
+											make up the bulk of the card's content.
+										</p>
+									</div>
+									<ul class="list-group list-group-flush">
+										<li class="list-group-item">Accion</li>
+										<li class="list-group-item">9.0</li>
+										<li class="list-group-item">A third item</li>
+									</ul>
+									<div class="card-body">
+										<a href="#" class="card-link">Card link</a>
+										<a href="#" class="card-link">Another link</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
+
+		<script src="public/js/bootstrap.bundle.js"></script>
 		<script src="public/js/main.js"></script>
 	</body>
 </html>
