genre filters, layout

--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
 										<li class="nav-item">
 											<a class="nav-link" href="#">Ultimos estrenos</a>
 										</li>
+										<li><hr class="dropdown-divider" /></li>
 										<li class="nav-item dropdown">
 											<a
-												class="nav-link dropdown-toggle"
+												class="nav-link dropdown-toggle text-center"
 												href="#"
 												id="navbarDropdown"
 												role="button"
@@ -92,21 +93,10 @@
 											</a>
 											<ul
 												id="tags"
-												class="dropdown-menu fs-4 text-center"
+												class="fs-2 text-start p-0"
 												aria-labelledby="navbarDropdown"
 											>
-												<li>
-													<a class="dropdown-item" href="#">Accion</a>
-												</li>
-												<li>
-													<a class="dropdown-item" href="#">Ciencia Ficcion</a>
-												</li>
-												<li>
-													<hr class="dropdown-divider" />
-												</li>
-												<li>
-													<a class="dropdown-item" href="#">Comedia</a>
-												</li>
+												<!-- <li id="${genre.id}" class="dropdown-item"></li> -->
 											</ul>
 										</li>
 									</ul>
