--- a/index.html
+++ b/index.html
@@ -132,6 +132,12 @@
 					</div>
 				</div>
 			</section>
+
+			<section class="container page-container">
+				<div class="page" id="prev">Pagina anterior</div>
+				<div class="page" id="current">1</div>
+				<div class="page" id="next">Pagina siguiente</div>
+			</section>
 		</main>
 
 		<script src="public/js/bootstrap.bundle.js"></script>
