--- a/index.html
+++ b/index.html
@@ -76,180 +76,61 @@
 		</header>
 
 		<main>
-			<section class="popular-movies container-fluid swiper">
-				<div class="swiper-wrapper d-flex gap-5">
-					<div class="popular-card swiper-slide">
-						<img class="img" src="https://picsum.photos/500/300" alt="" />
-						<div class="image-overlay">
-							<div class="overview">
-								<h3>Titulo de la pelicula</h3>
-								<p>
-									Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-									nesciunt asperiores assumenda. Sint molestias nisi cumque
-									fugiat saepe quos harum. Ad officia fugit debitis corrupti
-									excepturi aliquam perspiciatis illum. Quis recusandae error
-									doloremque facilis iure harum quam, voluptates itaque aliquid
-									alias odio consequuntur nesciunt assumenda. Pariatur numquam
-									exercitationem praesentium cupiditate!
-								</p>
-
-								<button class="trailer-btn">Ver trailer</button>
+			<div class="popular-movies-slider">
+				<h2 class="subtitle">Peliculas populares</h2>
+				<div class="swiper-container swiper">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide movie">
+							<img src="https://picsum.photos/1000/600" alt="Movie Title" />
+							<div class="image-overlay">
+								<div class="overview">
+									<h3>Titulo de la pelicula</h3>
+									<p>
+										Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+										Maxime officiis debitis nihil hic possimus fugiat
+										exercitationem? Exercitationem sapiente quibusdam itaque
+										libero assumenda placeat quia praesentium labore nihil nobis
+										totam maiores quas officia magnam, excepturi repudiandae
+										illo. Assumenda facere molestias, illum ducimus dicta error,
+										vel necessitatibus aperiam provident quos, sequi aspernatur!
+									</p>
+								</div>
 							</div>
+						</div>
+
+						<div class="swiper-slide">
+							<img src="https://picsum.photos/1000/600" alt="Movie Title" />
+						</div>
+						<div class="swiper-slide">
+							<img src="https://picsum.photos/1000/600" alt="Movie Title" />
+						</div>
+						<div class="swiper-slide">
+							<img src="https://picsum.photos/1000/600" alt="Movie Title" />
+						</div>
+						<div class="swiper-slide">
+							<img src="https://picsum.photos/1000/600" alt="Movie Title" />
+						</div>
+						<div class="swiper-slide">
+							<img src="https://picsum.photos/1000/600" alt="Movie Title" />
+						</div>
+						<div class="swiper-slide">
+							<img src="https://picsum.photos/1000/600" alt="Movie Title" />
+						</div>
+						<div class="swiper-slide">
+							<img src="https://picsum.photos/1000/600" alt="Movie Title" />
+						</div>
+						<div class="swiper-slide">
+							<img src="https://picsum.photos/1000/600" alt="Movie Title" />
+						</div>
+						<div class="swiper-slide">
+							<img src="https://picsum.photos/1000/600" alt="Movie Title" />
 						</div>
 					</div>
 
-					<div class="popular-card swiper-slide">
-						<img class="img" src="https://picsum.photos/500/300" alt="" />
-						<div class="image-overlay">
-							<div class="overview">
-								<h3>Titulo de la pelicula</h3>
-								<p>
-									Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-									nesciunt asperiores assumenda. Sint molestias nisi cumque
-									fugiat saepe quos harum. Ad officia fugit debitis corrupti
-									excepturi aliquam perspiciatis illum. Quis recusandae error
-									doloremque facilis iure harum quam, voluptates itaque aliquid
-									alias odio consequuntur nesciunt assumenda. Pariatur numquam
-									exercitationem praesentium cupiditate!
-								</p>
-
-								<button class="trailer-btn">Ver trailer</button>
-							</div>
-						</div>
-					</div>
-
-					<div class="popular-card swiper-slide">
-						<img class="img" src="https://picsum.photos/500/300" alt="" />
-						<div class="image-overlay">
-							<div class="overview">
-								<h3>Titulo de la pelicula</h3>
-								<p>
-									Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-									nesciunt asperiores assumenda. Sint molestias nisi cumque
-									fugiat saepe quos harum. Ad officia fugit debitis corrupti
-									excepturi aliquam perspiciatis illum. Quis recusandae error
-									doloremque facilis iure harum quam, voluptates itaque aliquid
-									alias odio consequuntur nesciunt assumenda. Pariatur numquam
-									exercitationem praesentium cupiditate!
-								</p>
-
-								<button class="trailer-btn">Ver trailer</button>
-							</div>
-						</div>
-					</div>
-
-					<div class="popular-card swiper-slide">
-						<img class="img" src="https://picsum.photos/500/300" alt="" />
-						<div class="image-overlay">
-							<div class="overview">
-								<h3>Titulo de la pelicula</h3>
-								<p>
-									Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-									nesciunt asperiores assumenda. Sint molestias nisi cumque
-									fugiat saepe quos harum. Ad officia fugit debitis corrupti
-									excepturi aliquam perspiciatis illum. Quis recusandae error
-									doloremque facilis iure harum quam, voluptates itaque aliquid
-									alias odio consequuntur nesciunt assumenda. Pariatur numquam
-									exercitationem praesentium cupiditate!
-								</p>
-
-								<button class="trailer-btn">Ver trailer</button>
-							</div>
-						</div>
-					</div>
-
-					<div class="popular-card swiper-slide">
-						<img class="img" src="https://picsum.photos/500/300" alt="" />
-						<div class="image-overlay">
-							<div class="overview">
-								<h3>Titulo de la pelicula</h3>
-								<p>
-									Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-									nesciunt asperiores assumenda. Sint molestias nisi cumque
-									fugiat saepe quos harum. Ad officia fugit debitis corrupti
-									excepturi aliquam perspiciatis illum. Quis recusandae error
-									doloremque facilis iure harum quam, voluptates itaque aliquid
-									alias odio consequuntur nesciunt assumenda. Pariatur numquam
-									exercitationem praesentium cupiditate!
-								</p>
-
-								<button class="trailer-btn">Ver trailer</button>
-							</div>
-						</div>
-					</div>
-
-					<div class="popular-card swiper-slide">
-						<img class="img" src="https://picsum.photos/500/300" alt="" />
-						<div class="image-overlay">
-							<div class="overview">
-								<h3>Titulo de la pelicula</h3>
-								<p>
-									Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-									nesciunt asperiores assumenda. Sint molestias nisi cumque
-									fugiat saepe quos harum. Ad officia fugit debitis corrupti
-									excepturi aliquam perspiciatis illum. Quis recusandae error
-									doloremque facilis iure harum quam, voluptates itaque aliquid
-									alias odio consequuntur nesciunt assumenda. Pariatur numquam
-									exercitationem praesentium cupiditate!
-								</p>
-
-								<button class="trailer-btn">Ver trailer</button>
-							</div>
-						</div>
-					</div>
-
-					<div class="popular-card swiper-slide">
-						<img class="img" src="https://picsum.photos/500/300" alt="" />
-						<div class="image-overlay">
-							<div class="overview">
-								<h3>Titulo de la pelicula</h3>
-								<p>
-									Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-									nesciunt asperiores assumenda. Sint molestias nisi cumque
-									fugiat saepe quos harum. Ad officia fugit debitis corrupti
-									excepturi aliquam perspiciatis illum. Quis recusandae error
-									doloremque facilis iure harum quam, voluptates itaque aliquid
-									alias odio consequuntur nesciunt assumenda. Pariatur numquam
-									exercitationem praesentium cupiditate!
-								</p>
-
-								<button class="trailer-btn">Ver trailer</button>
-							</div>
-						</div>
-					</div>
-
-					<div class="popular-card swiper-slide">
-						<img class="img" src="https://picsum.photos/500/300" alt="" />
-						<div class="image-overlay">
-							<div class="overview">
-								<h3>Titulo de la pelicula</h3>
-								<p>
-									Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-									nesciunt asperiores assumenda. Sint molestias nisi cumque
-									fugiat saepe quos harum. Ad officia fugit debitis corrupti
-									excepturi aliquam perspiciatis illum. Quis recusandae error
-									doloremque facilis iure harum quam, voluptates itaque aliquid
-									alias odio consequuntur nesciunt assumenda. Pariatur numquam
-									exercitationem praesentium cupiditate!
-								</p>
-
-								<button class="trailer-btn">Ver trailer</button>
-							</div>
-						</div>
-					</div>
+					<div class="swiper-button-next"></div>
+					<div class="swiper-button-prev"></div>
 				</div>
-
-				<div class="swiper-button-prev"></div>
-				<div class="swiper-button-next"></div>
-
-				<div class="swiper-scrollbar"></div>
-			</section>
-
-			<section class="container page-container">
-				<div class="page" id="prev">Pagina anterior</div>
-				<div class="page" id="current">1</div>
-				<div class="page" id="next">Pagina siguiente</div>
-			</section>
+			</div>
 		</main>
 
 		<script src="public/js/bootstrap.bundle.js"></script>
