latest movies layout

--- a/index.html
+++ b/index.html
@@ -76,15 +76,22 @@
 		</header>
 
 		<main>
-			<div class="popular-movies-slider">
+			<section class="popular-movies-slider">
 				<h2 class="subtitle">Peliculas populares</h2>
-				<div class="swiper-container swiper">
+				<div class="swiper-container-popular swiper">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide movie">
-							<img src="https://picsum.photos/1000/600" alt="Movie Title" />
+							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
 							<div class="image-overlay">
 								<div class="overview">
 									<h3>Titulo de la pelicula</h3>
+									<span class="info-movie">Genero</span>
+									<span class="info-movie"
+										><i class="fas fa-star"></i> 9.0</span
+									>
+									<span class="info-movie"
+										><i class="far fa-calendar-alt"></i> 03/01/2022</span
+									>
 									<p>
 										Lorem ipsum, dolor sit amet consectetur adipisicing elit.
 										Maxime officiis debitis nihil hic possimus fugiat
@@ -99,38 +106,101 @@
 						</div>
 
 						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/600" alt="Movie Title" />
+							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
 						</div>
 						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/600" alt="Movie Title" />
+							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
 						</div>
 						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/600" alt="Movie Title" />
+							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
 						</div>
 						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/600" alt="Movie Title" />
+							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
 						</div>
 						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/600" alt="Movie Title" />
+							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
 						</div>
 						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/600" alt="Movie Title" />
+							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
 						</div>
 						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/600" alt="Movie Title" />
+							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
 						</div>
 						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/600" alt="Movie Title" />
+							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
 						</div>
 						<div class="swiper-slide">
-							<img src="https://picsum.photos/1000/600" alt="Movie Title" />
+							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
 						</div>
 					</div>
 
 					<div class="swiper-button-next"></div>
 					<div class="swiper-button-prev"></div>
 				</div>
-			</div>
+			</section>
+
+			<section class="latest-movies-slider">
+				<h2 class="subtitle">Peliculas recientes</h2>
+				<div class="swiper-container-latest swiper">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide movie">
+							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
+							<div class="image-overlay">
+								<div class="overview">
+									<h3>Titulo de la pelicula</h3>
+									<span class="info-movie">Genero</span>
+									<span class="info-movie"
+										><i class="fas fa-star"></i> 9.0</span
+									>
+									<span class="info-movie"
+										><i class="far fa-calendar-alt"></i> 03/01/2022</span
+									>
+									<p>
+										Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+										Maxime officiis debitis nihil hic possimus fugiat
+										exercitationem? Exercitationem sapiente quibusdam itaque
+										libero assumenda placeat quia praesentium labore nihil nobis
+										totam maiores quas officia magnam, excepturi repudiandae
+										illo. Assumenda facere molestias, illum ducimus dicta error,
+										vel necessitatibus aperiam provident quos, sequi aspernatur!
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="swiper-slide">
+							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
+						</div>
+						<div class="swiper-slide">
+							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
+						</div>
+						<div class="swiper-slide">
+							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
+						</div>
+						<div class="swiper-slide">
+							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
+						</div>
+						<div class="swiper-slide">
+							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
+						</div>
+						<div class="swiper-slide">
+							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
+						</div>
+						<div class="swiper-slide">
+							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
+						</div>
+						<div class="swiper-slide">
+							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
+						</div>
+						<div class="swiper-slide">
+							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
+						</div>
+					</div>
+
+					<div class="swiper-button-next"></div>
+					<div class="swiper-button-prev"></div>
+				</div>
+			</section>
 		</main>
 
 		<script src="public/js/bootstrap.bundle.js"></script>
