movies, pagination and footer layout

--- a/index.html
+++ b/index.html
@@ -201,7 +201,271 @@
 					<div class="swiper-button-prev"></div>
 				</div>
 			</section>
+
+			<section class="movies-container">
+				<h2 class="subtitle">Peliculas</h2>
+				<div class="grid-container">
+					<div class="movie">
+						<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
+						<div class="image-overlay">
+							<div class="overview">
+								<h3>Titulo de la pelicula</h3>
+								<span class="info-movie">Genero</span>
+								<span class="info-movie"><i class="fas fa-star"></i> 9.0</span>
+								<span class="info-movie"
+									><i class="far fa-calendar-alt"></i> 03/01/2022</span
+								>
+								<p>
+									Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+									Maxime officiis debitis nihil hic possimus fugiat
+									exercitationem? Exercitationem sapiente quibusdam itaque
+									libero assumenda placeat quia praesentium labore nihil nobis
+									totam maiores quas officia magnam, excepturi repudiandae illo.
+									Assumenda facere molestias, illum ducimus dicta error, vel
+									necessitatibus aperiam provident quos, sequi aspernatur!
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="movie">
+						<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
+						<div class="image-overlay">
+							<div class="overview">
+								<h3>Titulo de la pelicula</h3>
+								<span class="info-movie">Genero</span>
+								<span class="info-movie"><i class="fas fa-star"></i> 9.0</span>
+								<span class="info-movie"
+									><i class="far fa-calendar-alt"></i> 03/01/2022</span
+								>
+								<p>
+									Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+									Maxime officiis debitis nihil hic possimus fugiat
+									exercitationem? Exercitationem sapiente quibusdam itaque
+									libero assumenda placeat quia praesentium labore nihil nobis
+									totam maiores quas officia magnam, excepturi repudiandae illo.
+									Assumenda facere molestias, illum ducimus dicta error, vel
+									necessitatibus aperiam provident quos, sequi aspernatur!
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="movie">
+						<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
+						<div class="image-overlay">
+							<div class="overview">
+								<h3>Titulo de la pelicula</h3>
+								<span class="info-movie">Genero</span>
+								<span class="info-movie"><i class="fas fa-star"></i> 9.0</span>
+								<span class="info-movie"
+									><i class="far fa-calendar-alt"></i> 03/01/2022</span
+								>
+								<p>
+									Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+									Maxime officiis debitis nihil hic possimus fugiat
+									exercitationem? Exercitationem sapiente quibusdam itaque
+									libero assumenda placeat quia praesentium labore nihil nobis
+									totam maiores quas officia magnam, excepturi repudiandae illo.
+									Assumenda facere molestias, illum ducimus dicta error, vel
+									necessitatibus aperiam provident quos, sequi aspernatur!
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="movie">
+						<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
+						<div class="image-overlay">
+							<div class="overview">
+								<h3>Titulo de la pelicula</h3>
+								<span class="info-movie">Genero</span>
+								<span class="info-movie"><i class="fas fa-star"></i> 9.0</span>
+								<span class="info-movie"
+									><i class="far fa-calendar-alt"></i> 03/01/2022</span
+								>
+								<p>
+									Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+									Maxime officiis debitis nihil hic possimus fugiat
+									exercitationem? Exercitationem sapiente quibusdam itaque
+									libero assumenda placeat quia praesentium labore nihil nobis
+									totam maiores quas officia magnam, excepturi repudiandae illo.
+									Assumenda facere molestias, illum ducimus dicta error, vel
+									necessitatibus aperiam provident quos, sequi aspernatur!
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="movie">
+						<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
+						<div class="image-overlay">
+							<div class="overview">
+								<h3>Titulo de la pelicula</h3>
+								<span class="info-movie">Genero</span>
+								<span class="info-movie"><i class="fas fa-star"></i> 9.0</span>
+								<span class="info-movie"
+									><i class="far fa-calendar-alt"></i> 03/01/2022</span
+								>
+								<p>
+									Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+									Maxime officiis debitis nihil hic possimus fugiat
+									exercitationem? Exercitationem sapiente quibusdam itaque
+									libero assumenda placeat quia praesentium labore nihil nobis
+									totam maiores quas officia magnam, excepturi repudiandae illo.
+									Assumenda facere molestias, illum ducimus dicta error, vel
+									necessitatibus aperiam provident quos, sequi aspernatur!
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="movie">
+						<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
+						<div class="image-overlay">
+							<div class="overview">
+								<h3>Titulo de la pelicula</h3>
+								<span class="info-movie">Genero</span>
+								<span class="info-movie"><i class="fas fa-star"></i> 9.0</span>
+								<span class="info-movie"
+									><i class="far fa-calendar-alt"></i> 03/01/2022</span
+								>
+								<p>
+									Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+									Maxime officiis debitis nihil hic possimus fugiat
+									exercitationem? Exercitationem sapiente quibusdam itaque
+									libero assumenda placeat quia praesentium labore nihil nobis
+									totam maiores quas officia magnam, excepturi repudiandae illo.
+									Assumenda facere molestias, illum ducimus dicta error, vel
+									necessitatibus aperiam provident quos, sequi aspernatur!
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="movie">
+						<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
+						<div class="image-overlay">
+							<div class="overview">
+								<h3>Titulo de la pelicula</h3>
+								<span class="info-movie">Genero</span>
+								<span class="info-movie"><i class="fas fa-star"></i> 9.0</span>
+								<span class="info-movie"
+									><i class="far fa-calendar-alt"></i> 03/01/2022</span
+								>
+								<p>
+									Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+									Maxime officiis debitis nihil hic possimus fugiat
+									exercitationem? Exercitationem sapiente quibusdam itaque
+									libero assumenda placeat quia praesentium labore nihil nobis
+									totam maiores quas officia magnam, excepturi repudiandae illo.
+									Assumenda facere molestias, illum ducimus dicta error, vel
+									necessitatibus aperiam provident quos, sequi aspernatur!
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="movie">
+						<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
+						<div class="image-overlay">
+							<div class="overview">
+								<h3>Titulo de la pelicula</h3>
+								<span class="info-movie">Genero</span>
+								<span class="info-movie"><i class="fas fa-star"></i> 9.0</span>
+								<span class="info-movie"
+									><i class="far fa-calendar-alt"></i> 03/01/2022</span
+								>
+								<p>
+									Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+									Maxime officiis debitis nihil hic possimus fugiat
+									exercitationem? Exercitationem sapiente quibusdam itaque
+									libero assumenda placeat quia praesentium labore nihil nobis
+									totam maiores quas officia magnam, excepturi repudiandae illo.
+									Assumenda facere molestias, illum ducimus dicta error, vel
+									necessitatibus aperiam provident quos, sequi aspernatur!
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="movie">
+						<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
+						<div class="image-overlay">
+							<div class="overview">
+								<h3>Titulo de la pelicula</h3>
+								<span class="info-movie">Genero</span>
+								<span class="info-movie"><i class="fas fa-star"></i> 9.0</span>
+								<span class="info-movie"
+									><i class="far fa-calendar-alt"></i> 03/01/2022</span
+								>
+								<p>
+									Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+									Maxime officiis debitis nihil hic possimus fugiat
+									exercitationem? Exercitationem sapiente quibusdam itaque
+									libero assumenda placeat quia praesentium labore nihil nobis
+									totam maiores quas officia magnam, excepturi repudiandae illo.
+									Assumenda facere molestias, illum ducimus dicta error, vel
+									necessitatibus aperiam provident quos, sequi aspernatur!
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="movie">
+						<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
+						<div class="image-overlay">
+							<div class="overview">
+								<h3>Titulo de la pelicula</h3>
+								<span class="info-movie">Genero</span>
+								<span class="info-movie"><i class="fas fa-star"></i> 9.0</span>
+								<span class="info-movie"
+									><i class="far fa-calendar-alt"></i> 03/01/2022</span
+								>
+								<p>
+									Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+									Maxime officiis debitis nihil hic possimus fugiat
+									exercitationem? Exercitationem sapiente quibusdam itaque
+									libero assumenda placeat quia praesentium labore nihil nobis
+									totam maiores quas officia magnam, excepturi repudiandae illo.
+									Assumenda facere molestias, illum ducimus dicta error, vel
+									necessitatibus aperiam provident quos, sequi aspernatur!
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="pagination">
+					<div class="page" id="prev">Pagina anterior</div>
+					<div class="page" id="current">1</div>
+					<div class="page" id="next">Pagina siguiente</div>
+				</div>
+			</section>
 		</main>
+
+		<footer>
+			<section class="footer">
+				<div class="contact">
+					<i class="fab fa-github d-none d-sm-block"></i>
+					<a
+						class="d-none d-sm-block"
+						href="https://github.com/LukaLiuzzi"
+						target="_blank"
+						>LukaLiuzzi</a
+					>
+
+					<i class="fab fa-linkedin"></i>
+					<a href="https://www.linkedin.com/in/lukaliuzzi/" target="_blank"
+						>lukaliuzzi</a
+					>
+				</div>
+
+				<div class="copy">
+					<span>All rights reserved - 2022</span>
+				</div>
+			</section>
+		</footer>
 
 		<script src="public/js/bootstrap.bundle.js"></script>
 		<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
