improve js code

--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
 							>
 								Generos
 							</button>
-							<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+							<ul
+								id="tags"
+								class="dropdown-menu"
+								aria-labelledby="dropdownMenuButton1"
+							>
 								<li class="dropdown-item">Aventura</li>
 								<li class="dropdown-item">Aventura</li>
 								<li class="dropdown-item">Aventura</li>
@@ -79,7 +83,7 @@
 			<section class="popular-movies-slider">
 				<h2 class="subtitle">Peliculas populares</h2>
 				<div class="swiper-container-popular swiper">
-					<div class="swiper-wrapper">
+					<div id="popular-movies" class="swiper-wrapper">
 						<div class="swiper-slide movie">
 							<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
 							<div class="image-overlay">
@@ -204,237 +208,7 @@
 
 			<section class="movies-container">
 				<h2 class="subtitle">Peliculas</h2>
-				<div class="grid-container">
-					<div class="movie">
-						<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						<div class="image-overlay">
-							<div class="overview">
-								<h3>Titulo de la pelicula</h3>
-								<span class="info-movie">Genero</span>
-								<span class="info-movie"><i class="fas fa-star"></i> 9.0</span>
-								<span class="info-movie"
-									><i class="far fa-calendar-alt"></i> 03/01/2022</span
-								>
-								<p>
-									Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-									Maxime officiis debitis nihil hic possimus fugiat
-									exercitationem? Exercitationem sapiente quibusdam itaque
-									libero assumenda placeat quia praesentium labore nihil nobis
-									totam maiores quas officia magnam, excepturi repudiandae illo.
-									Assumenda facere molestias, illum ducimus dicta error, vel
-									necessitatibus aperiam provident quos, sequi aspernatur!
-								</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="movie">
-						<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						<div class="image-overlay">
-							<div class="overview">
-								<h3>Titulo de la pelicula</h3>
-								<span class="info-movie">Genero</span>
-								<span class="info-movie"><i class="fas fa-star"></i> 9.0</span>
-								<span class="info-movie"
-									><i class="far fa-calendar-alt"></i> 03/01/2022</span
-								>
-								<p>
-									Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-									Maxime officiis debitis nihil hic possimus fugiat
-									exercitationem? Exercitationem sapiente quibusdam itaque
-									libero assumenda placeat quia praesentium labore nihil nobis
-									totam maiores quas officia magnam, excepturi repudiandae illo.
-									Assumenda facere molestias, illum ducimus dicta error, vel
-									necessitatibus aperiam provident quos, sequi aspernatur!
-								</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="movie">
-						<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						<div class="image-overlay">
-							<div class="overview">
-								<h3>Titulo de la pelicula</h3>
-								<span class="info-movie">Genero</span>
-								<span class="info-movie"><i class="fas fa-star"></i> 9.0</span>
-								<span class="info-movie"
-									><i class="far fa-calendar-alt"></i> 03/01/2022</span
-								>
-								<p>
-									Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-									Maxime officiis debitis nihil hic possimus fugiat
-									exercitationem? Exercitationem sapiente quibusdam itaque
-									libero assumenda placeat quia praesentium labore nihil nobis
-									totam maiores quas officia magnam, excepturi repudiandae illo.
-									Assumenda facere molestias, illum ducimus dicta error, vel
-									necessitatibus aperiam provident quos, sequi aspernatur!
-								</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="movie">
-						<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						<div class="image-overlay">
-							<div class="overview">
-								<h3>Titulo de la pelicula</h3>
-								<span class="info-movie">Genero</span>
-								<span class="info-movie"><i class="fas fa-star"></i> 9.0</span>
-								<span class="info-movie"
-									><i class="far fa-calendar-alt"></i> 03/01/2022</span
-								>
-								<p>
-									Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-									Maxime officiis debitis nihil hic possimus fugiat
-									exercitationem? Exercitationem sapiente quibusdam itaque
-									libero assumenda placeat quia praesentium labore nihil nobis
-									totam maiores quas officia magnam, excepturi repudiandae illo.
-									Assumenda facere molestias, illum ducimus dicta error, vel
-									necessitatibus aperiam provident quos, sequi aspernatur!
-								</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="movie">
-						<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						<div class="image-overlay">
-							<div class="overview">
-								<h3>Titulo de la pelicula</h3>
-								<span class="info-movie">Genero</span>
-								<span class="info-movie"><i class="fas fa-star"></i> 9.0</span>
-								<span class="info-movie"
-									><i class="far fa-calendar-alt"></i> 03/01/2022</span
-								>
-								<p>
-									Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-									Maxime officiis debitis nihil hic possimus fugiat
-									exercitationem? Exercitationem sapiente quibusdam itaque
-									libero assumenda placeat quia praesentium labore nihil nobis
-									totam maiores quas officia magnam, excepturi repudiandae illo.
-									Assumenda facere molestias, illum ducimus dicta error, vel
-									necessitatibus aperiam provident quos, sequi aspernatur!
-								</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="movie">
-						<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						<div class="image-overlay">
-							<div class="overview">
-								<h3>Titulo de la pelicula</h3>
-								<span class="info-movie">Genero</span>
-								<span class="info-movie"><i class="fas fa-star"></i> 9.0</span>
-								<span class="info-movie"
-									><i class="far fa-calendar-alt"></i> 03/01/2022</span
-								>
-								<p>
-									Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-									Maxime officiis debitis nihil hic possimus fugiat
-									exercitationem? Exercitationem sapiente quibusdam itaque
-									libero assumenda placeat quia praesentium labore nihil nobis
-									totam maiores quas officia magnam, excepturi repudiandae illo.
-									Assumenda facere molestias, illum ducimus dicta error, vel
-									necessitatibus aperiam provident quos, sequi aspernatur!
-								</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="movie">
-						<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						<div class="image-overlay">
-							<div class="overview">
-								<h3>Titulo de la pelicula</h3>
-								<span class="info-movie">Genero</span>
-								<span class="info-movie"><i class="fas fa-star"></i> 9.0</span>
-								<span class="info-movie"
-									><i class="far fa-calendar-alt"></i> 03/01/2022</span
-								>
-								<p>
-									Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-									Maxime officiis debitis nihil hic possimus fugiat
-									exercitationem? Exercitationem sapiente quibusdam itaque
-									libero assumenda placeat quia praesentium labore nihil nobis
-									totam maiores quas officia magnam, excepturi repudiandae illo.
-									Assumenda facere molestias, illum ducimus dicta error, vel
-									necessitatibus aperiam provident quos, sequi aspernatur!
-								</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="movie">
-						<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						<div class="image-overlay">
-							<div class="overview">
-								<h3>Titulo de la pelicula</h3>
-								<span class="info-movie">Genero</span>
-								<span class="info-movie"><i class="fas fa-star"></i> 9.0</span>
-								<span class="info-movie"
-									><i class="far fa-calendar-alt"></i> 03/01/2022</span
-								>
-								<p>
-									Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-									Maxime officiis debitis nihil hic possimus fugiat
-									exercitationem? Exercitationem sapiente quibusdam itaque
-									libero assumenda placeat quia praesentium labore nihil nobis
-									totam maiores quas officia magnam, excepturi repudiandae illo.
-									Assumenda facere molestias, illum ducimus dicta error, vel
-									necessitatibus aperiam provident quos, sequi aspernatur!
-								</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="movie">
-						<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						<div class="image-overlay">
-							<div class="overview">
-								<h3>Titulo de la pelicula</h3>
-								<span class="info-movie">Genero</span>
-								<span class="info-movie"><i class="fas fa-star"></i> 9.0</span>
-								<span class="info-movie"
-									><i class="far fa-calendar-alt"></i> 03/01/2022</span
-								>
-								<p>
-									Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-									Maxime officiis debitis nihil hic possimus fugiat
-									exercitationem? Exercitationem sapiente quibusdam itaque
-									libero assumenda placeat quia praesentium labore nihil nobis
-									totam maiores quas officia magnam, excepturi repudiandae illo.
-									Assumenda facere molestias, illum ducimus dicta error, vel
-									necessitatibus aperiam provident quos, sequi aspernatur!
-								</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="movie">
-						<img src="https://picsum.photos/1000/1000" alt="Movie Title" />
-						<div class="image-overlay">
-							<div class="overview">
-								<h3>Titulo de la pelicula</h3>
-								<span class="info-movie">Genero</span>
-								<span class="info-movie"><i class="fas fa-star"></i> 9.0</span>
-								<span class="info-movie"
-									><i class="far fa-calendar-alt"></i> 03/01/2022</span
-								>
-								<p>
-									Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-									Maxime officiis debitis nihil hic possimus fugiat
-									exercitationem? Exercitationem sapiente quibusdam itaque
-									libero assumenda placeat quia praesentium labore nihil nobis
-									totam maiores quas officia magnam, excepturi repudiandae illo.
-									Assumenda facere molestias, illum ducimus dicta error, vel
-									necessitatibus aperiam provident quos, sequi aspernatur!
-								</p>
-							</div>
-						</div>
-					</div>
-				</div>
+				<div id="movies" class="grid-container"></div>
 
 				<div class="pagination">
 					<div class="page" id="prev">Pagina anterior</div>
